# HugeLoot

./: .gitignore  CMakeLists.txt
HugeLoot/: CMakeCache.txt  CMakeLists.txt  cefsimple_mac.mm  webpack.config.js
HugeLoot/examples/message_router/: helper-Info.plist  helper-Info_gpu.plist  helper-Info_plugin.plist  helper-Info_renderer.plist
HugeLoot/scripts/: helpers.js
HugeLoot/src/gui/: helpers.cpp  main.cpp
HugeLoot/src/gui/cef/: loot_app.h
HugeLoot/src/gui/cef/query/: query.h
HugeLoot/src/gui/cef/query/types/: apply_sort_query.h
HugeLoot/src/gui/state/: logging.cpp
examples/: CMakeLists.txt
examples/HugeLoot/: CMakeLists.txt  app_browser_impl.cc  client_impl.cc
examples/message_router/: CMakeLists.txt  package.json
examples/message_router/src/gui/: helpers.cpp
examples/message_router/src/gui/cef/: loot_app.cpp
examples/shared/: CMakeLists.txt  client_util_mac.mm  main_mac.mm  main_win.cc  package-lock.json  webpack.config.js
examples/shared/scripts/: helpers.js
examples/shared/src/gui/: main.cpp
examples/shared/src/gui/cef/: loot_app.cpp
examples/shared/src/gui/cef/query/types/: sort_plugins_query.h
tools/buildtools/: download_from_google_storage.py
